add top story, my turn, and culture section to column 2

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container main-con px-0">
       <div class="row justify-content-center">
-        <div class="col-3 bg-white">
+        <div class="col-3 bg-white px-2">
           <!-- featured stories -->
 
           <!-- sub-heading -->
@@ -146,9 +146,116 @@
           <!-- article end -->
         </div>
 
-        <div class="col-5 bg-danger">hello</div>
+        <div class="col-5 bg-white px-3">
+          <!-- start of top story -->
+          <!-- sub-heading -->
+          <h6 class="text-uppercase text-muted font-weight-bold">
+            top story
+          </h6>
+          <!--article start -->
+          <section>
+            <span class="position-relative d-flex flex-column">
+              <img src="/img/top-story.jpg" alt="#" class="img-fluid" />
+              <span
+                class="genre position-absolute px-2 pb-1 pt-1 font-weight-bold"
+                >HEALTH</span
+              >
+            </span>
+            <!--article title  -->
+            <a href="#" class="text-dark underline-red">
+              <h5 class="text-captialize font-weight-bold mt-2">
+                Russia's Vaccine Gamble—Putin's Sputnik Moment—Could Backfire
+                Badly
+              </h5>
+            </a>
+            <!-- article description -->
+            <p class="article-des">
+              The Russian president announced that the vaccine has been given
+              regulatory approval, sparking concern among experts after less
+              than two months of testing.
+            </p>
+          </section>
+          <!-- end of top story -->
+          <!-- start of my turn -->
+          <section>
+            <!-- subtitle -->
+            <h6 class="text-uppercase text-muted font-weight-bold">
+              my turn
+            </h6>
+            <!-- my-turn container -->
+            <div class="container px-0">
+              <div class="row">
+                <div class="col-4 px-2">
+                  <a href="#"
+                    ><img src="/img/my-turn-1.jpg" class="img-fluid"
+                  /></a>
+                  <p class="text-muted grey-text mt-2" style="font-size: 15px;">
+                    'I Work With Couples About to Divorce, Here Are Their Top 5
+                    Problems'
+                  </p>
+                </div>
+                <div class="col-4 px-2">
+                  <a href="#"
+                    ><img src="/img/my-turn-2.jpg" class="img-fluid"
+                  /></a>
+                  <p class="text-muted grey-text mt-2" style="font-size: 15px;">
+                    'I'm Bringing a Therapy Llama to the Portland Protests'
+                  </p>
+                </div>
+                <div class="col-4 px-2">
+                  <a href="#"
+                    ><img src="/img/my-turn-3.jpg" class="img-fluid"
+                  /></a>
+                  <p class="text-muted grey-text mt-2" style="font-size: 15px;">
+                    'Six Years On From Mike Brown's Death, I Have Not Seen The
+                    Change We Need'
+                  </p>
+                </div>
+              </div>
+            </div>
+          </section>
+          <!-- end of my turn -->
+          <!-- start of culture -->
+          <!-- start of my turn -->
+          <section>
+            <!-- subtitle -->
+            <h6 class="text-uppercase text-muted font-weight-bold">
+              my turn
+            </h6>
+            <!-- culture container -->
+            <div class="container px-0">
+              <div class="row">
+                <div class="col-4 px-2">
+                  <a href="#"
+                    ><img src="/img/culture-1.jpg" class="img-fluid"
+                  /></a>
+                  <p class="text-muted grey-text mt-2" style="font-size: 15px;">
+                    Outdoor Movies Around the World with Cinematic Views
+                  </p>
+                </div>
+                <div class="col-4 px-2">
+                  <a href="#"
+                    ><img src="/img/culture-2.jpg" class="img-fluid"
+                  /></a>
+                  <p class="text-muted grey-text mt-2" style="font-size: 15px;">
+                    RVs Continue to Surge in Popularity Amidst Pandemic
+                  </p>
+                </div>
+                <div class="col-4 px-2">
+                  <a href="#"
+                    ><img src="/img/culture-3.jpg" class="img-fluid"
+                  /></a>
+                  <p class="text-muted grey-text mt-2" style="font-size: 15px;">
+                    Ready for Shark Week? The Most Surprising Facts About Sharks
+                  </p>
+                </div>
+              </div>
+            </div>
+          </section>
+          <!-- end of culture -->
+        </div>
 
-        <div class="col-3 bg-warning">hello</div>
+        <div class="col-3 bg-warning px-2">hello</div>
       </div>
     </div>
 
