add more stories section with independent scroll

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <body>
     <div class="container main-con px-0">
       <div class="row justify-content-center">
+        <!-- column 1 -->
         <div class="col-3 bg-white px-2">
           <!-- featured stories -->
 
@@ -145,15 +146,16 @@
           </section>
           <!-- article end -->
         </div>
-
+        <!-- column 2 -->
         <div class="col-5 bg-white px-3">
           <!-- start of top story -->
-          <!-- sub-heading -->
-          <h6 class="text-uppercase text-muted font-weight-bold">
-            top story
-          </h6>
-          <!--article start -->
+
           <section>
+            <!-- sub-heading -->
+            <h6 class="text-uppercase text-muted font-weight-bold">
+              top story
+            </h6>
+            <!--article start -->
             <span class="position-relative d-flex flex-column">
               <img src="/img/top-story.jpg" alt="#" class="img-fluid" />
               <span
@@ -175,6 +177,7 @@
               than two months of testing.
             </p>
           </section>
+
           <!-- end of top story -->
           <!-- start of my turn -->
           <section>
@@ -183,7 +186,7 @@
               my turn
             </h6>
             <!-- my-turn container -->
-            <div class="container px-0">
+            <div class="container px-2">
               <div class="row">
                 <div class="col-4 px-2">
                   <a href="#"
@@ -214,16 +217,16 @@
               </div>
             </div>
           </section>
+
           <!-- end of my turn -->
           <!-- start of culture -->
-          <!-- start of my turn -->
           <section>
             <!-- subtitle -->
             <h6 class="text-uppercase text-muted font-weight-bold">
               my turn
             </h6>
             <!-- culture container -->
-            <div class="container px-0">
+            <div class="container px-2">
               <div class="row">
                 <div class="col-4 px-2">
                   <a href="#"
@@ -253,8 +256,300 @@
             </div>
           </section>
           <!-- end of culture -->
+          <!-- start of more stories -->
+          <section class="scroll-height">
+            <h6 class="text-uppercase text-muted font-weight-bold">
+              more stories
+            </h6>
+            <!-- start of story -->
+            <div class="container border-bottom">
+              <div class="row">
+                <div class="col d-flex p-0 align-items-start">
+                  <img
+                    src="/img/more-stories/more-1.jpg"
+                    alt="more-1"
+                    class="img-fit pt-1"
+                  />
+                  <div class="pl-3">
+                    <a href="#" class="underline-red text-dark grey-text"
+                      >73% of Americans Say COVID Test Should be Required for
+                      Students, Employees</a
+                    >
+                    <p class="article-des">
+                      A majority of Americans say that a negative test result
+                      for the novel coronavirus should be required before
+                      returning back to work or school, according to a new poll.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end of story -->
+            <!-- start of story -->
+            <div class="container border-bottom pt-3">
+              <div class="row">
+                <div class="col d-flex p-0 align-items-start">
+                  <img
+                    src="/img/more-stories/more-2.jpg"
+                    alt="more-1"
+                    class="img-fit pt-1"
+                  />
+                  <div class="pl-3">
+                    <a href="#" class="underline-red text-dark grey-text"
+                      >Congressional Democrats Lead Republicans by 9 Percent in
+                      Favorability</a
+                    >
+                    <p class="article-des">
+                      More voters said they trust Democrats when it comes to
+                      handling jobs, health care and education.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end of story -->
+            <!-- start of story -->
+            <div class="container border-bottom pt-3">
+              <div class="row">
+                <div class="col d-flex p-0 align-items-start">
+                  <img
+                    src="/img/more-stories/more-3.jpg"
+                    alt="more-1"
+                    class="img-fit pt-1"
+                  />
+                  <div class="pl-3">
+                    <a href="#" class="underline-red text-dark grey-text"
+                      >Emails from Sweden's Fauci Reveal Discussions About 'Herd
+                      Immunity' Plans</a
+                    >
+                    <p class="article-des">
+                      "I believe thousands are already infected in Sweden... it
+                      will all come to an end when so many have been infected
+                      and become therefore immune that the virus has nowhere
+                      else to go," one email read.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end of story -->
+            <!-- start of story -->
+            <div class="container border-bottom pt-3">
+              <div class="row">
+                <div class="col d-flex p-0 align-items-start">
+                  <img
+                    src="/img/more-stories/more-4.jpg"
+                    alt="more-1"
+                    class="img-fit pt-1"
+                  />
+                  <div class="pl-3">
+                    <a href="#" class="underline-red text-dark grey-text"
+                      >Trump Calls Harris 'Phony'—Americans Say She's More
+                      'Honest' Than Pence</a
+                    >
+                    <p class="article-des">
+                      In a new poll, voters said they see Kamala Harris as more
+                      honest than not. The same was not true for Pence.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end of story -->
+            <!-- start of story -->
+            <div class="container border-bottom pt-3">
+              <div class="row">
+                <div class="col d-flex p-0 align-items-start">
+                  <img
+                    src="/img/more-stories/more-5.jpg"
+                    alt="more-1"
+                    class="img-fit pt-1"
+                  />
+                  <div class="pl-3">
+                    <a href="#" class="underline-red text-dark grey-text"
+                      >Giuliani Says Biden DOJ Investigating Trump Would Lead to
+                      'Banana Republic'</a
+                    >
+                    <p class="article-des">
+                      The former New York City mayor discussed the possibility
+                      that a Joe Biden administration would start a criminal
+                      investigation of Donald Trump.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end of story -->
+            <!-- start of story -->
+            <div class="container border-bottom pt-3">
+              <div class="row">
+                <div class="col d-flex p-0 align-items-start">
+                  <img
+                    src="/img/more-stories/more-6.jpg"
+                    alt="more-1"
+                    class="img-fit pt-1"
+                  />
+                  <div class="pl-3">
+                    <a href="#" class="underline-red text-dark grey-text"
+                      >Georgia High School With Viral Hallway Photo Reopens
+                      Again</a
+                    >
+                    <p class="article-des">
+                      North Paulding High School students will return to campus
+                      next week on alternating days after the school was closed
+                      this week to be disinfected.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end of story -->
+            <!-- start of story -->
+            <div class="container border-bottom pt-3">
+              <div class="row">
+                <div class="col d-flex p-0 align-items-start">
+                  <img
+                    src="/img/more-stories/more-7.jpg"
+                    alt="more-1"
+                    class="img-fit pt-1"
+                  />
+                  <div class="pl-3">
+                    <a href="#" class="underline-red text-dark grey-text"
+                      >Herman Cain Twitter Account Shares Posthumous Attack on
+                      Biden and Harris</a
+                    >
+                    <p class="article-des">
+                      Cain, who previously ran to be the Republican presidential
+                      candidate, died aged 74 in July, after testing positive
+                      for coronavirus.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end of story -->
+            <!-- start of story -->
+            <div class="container border-bottom pt-3">
+              <div class="row">
+                <div class="col d-flex p-0 align-items-start">
+                  <img
+                    src="/img/more-stories/more-8.jpg"
+                    alt="more-1"
+                    class="img-fit pt-1"
+                  />
+                  <div class="pl-3">
+                    <a href="#" class="underline-red text-dark grey-text"
+                      >Duterte Walks Back Offer to Putin to Test Russia's
+                      COVID-19 Vaccine</a
+                    >
+                    <p class="article-des">
+                      The Philippines leader had previously offered to test the
+                      coronavirus vaccine announced by Russia this week.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end of story -->
+            <!-- start of story -->
+            <div class="container border-bottom pt-3">
+              <div class="row">
+                <div class="col d-flex p-0 align-items-start">
+                  <img
+                    src="/img/more-stories/more-9.jpg"
+                    alt="more-1"
+                    class="img-fit pt-1"
+                  />
+                  <div class="pl-3">
+                    <a href="#" class="underline-red text-dark grey-text"
+                      >Is Amazon Alexa Safe? Cybersecurity Researchers Uncover
+                      Privacy Issues</a
+                    >
+                    <p class="article-des">
+                      Check Point published a report detailing "vulnerabilities
+                      found on Amazon's Alexa," including a hacker's access to
+                      the user's voice history and personal information.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end of story -->
+            <!-- start of story -->
+            <div class="container border-bottom pt-3">
+              <div class="row">
+                <div class="col d-flex p-0 align-items-start">
+                  <img
+                    src="/img/more-stories/more-10.jpg"
+                    alt="more-1"
+                    class="img-fit pt-1"
+                  />
+                  <div class="pl-3">
+                    <a href="#" class="underline-red text-dark grey-text"
+                      >Iran Threatens Musician With Jail for Encouraging Women
+                      to Sing, Dance</a
+                    >
+                    <p class="article-des">
+                      Mehdi Rajabian has already been imprisoned for his music,
+                      but this week he was summoned back to court to face new
+                      charges related to his work with female artists.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end of story -->
+            <!-- start of story -->
+            <div class="container border-bottom pt-3">
+              <div class="row">
+                <div class="col d-flex p-0 align-items-start">
+                  <img
+                    src="/img/more-stories/more-11.jpg"
+                    alt="more-1"
+                    class="img-fit pt-1"
+                  />
+                  <div class="pl-3">
+                    <a href="#" class="underline-red text-dark grey-text"
+                      >Donald Trump Shares Bizarre Train Meme of Joe Biden
+                      Pumping a Handcar</a
+                    >
+                    <p class="article-des">
+                      The video posted by the president has been viewed more
+                      than 5 million times and received thousands of shares.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end of story -->
+            <!-- start of story -->
+            <div class="container border-bottom pt-3">
+              <div class="row">
+                <div class="col d-flex p-0 align-items-start">
+                  <img
+                    src="/img/more-stories/more-12.jpg"
+                    alt="more-1"
+                    class="img-fit pt-1"
+                  />
+                  <div class="pl-3">
+                    <a href="#" class="underline-red text-dark grey-text"
+                      >Pompeo Says Claim Floyd Protests Weaken U.S. Moral
+                      Authority Is 'Insulting'</a
+                    >
+                    <p class="article-des">
+                      Secretary of state told Radio Free Europe he had no
+                      worries about the U.S.'s ability to take a tough line with
+                      authoritarian regimes.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end of story -->
+          </section>
+          <!-- end of more stories -->
         </div>
-
+        <!-- column 3 -->
         <div class="col-3 bg-warning px-2">hello</div>
       </div>
     </div>
