add opinion section, sticky scroll and sign-up card

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
           <!-- end of more stories -->
         </div>
         <!-- column 3 -->
-        <div class="col-3 px-2">
+        <div class="col-3 px-2 sticky align-self-start">
           <!-- start of the debate -->
           <!-- title -->
           <h6 class="text-uppercase text-muted font-weight-bold">
@@ -554,7 +554,7 @@
           >
             <!-- debate article -->
             <div class="d-flex px-0 pt-2">
-              <img src="/img/debate-1.jpg" alt="debate-1" class="col3-img" />
+              <img src="/img/debate-1.jpg" class="col3-img" />
 
               <div class="ml-3">
                 <a href="#" class="underline-red text-dark grey-text"
@@ -591,6 +591,156 @@
           </section>
           <!-- end of the debate -->
           <!-- start of opinion -->
+          <section>
+            <!-- title -->
+            <h6 class="text-uppercase text-muted font-weight-bold mt-3">
+              opinion
+            </h6>
+            <!-- opinion article -->
+            <div class="d-flex px-0 pt-2 border-bottom">
+              <img src="img/opinion/op-1.jpg" class="col3-img" />
+              <div class="ml-3">
+                <a href="#" class="underline-red text-dark grey-text"
+                  >Unlike Republicans, Democrats Can Govern. But Can They
+                  Fight?</a
+                >
+                <p
+                  class="grey-text pt-1 text-muted"
+                  style="font-size: smaller;"
+                >
+                  BY ROBERT REICH
+                </p>
+              </div>
+            </div>
+            <!-- opinion article end -->
+            <!-- opinion article -->
+            <div class="d-flex px-0 pt-2 border-bottom">
+              <img src="img/opinion/op-2.jpg" class="col3-img" />
+              <div class="ml-3">
+                <a href="#" class="underline-red text-dark grey-text"
+                  >New Mideast Peace Deal Reflects a Broader U.S. Strategy</a
+                >
+                <p
+                  class="grey-text pt-1 text-muted"
+                  style="font-size: smaller;"
+                >
+                  BY ILAN BERMAN
+                </p>
+              </div>
+            </div>
+            <!-- opinion article end -->
+            <!-- opinion article -->
+            <div class="d-flex px-0 pt-2 border-bottom">
+              <img src="img/opinion/op-3.jpg" class="col3-img" />
+              <div class="ml-3">
+                <a href="#" class="underline-red text-dark grey-text">
+                  We Need to Invoke the U.N. Snapback on Iran—Before It's Too
+                  Late</a
+                >
+                <p
+                  class="grey-text pt-1 text-muted"
+                  style="font-size: smaller;"
+                >
+                  BY TED CRUZ
+                </p>
+              </div>
+            </div>
+            <!-- opinion article end -->
+            <!-- opinion article -->
+            <div class="d-flex px-0 pt-2 border-bottom">
+              <img src="img/opinion/op-4.jpg" class="col3-img" />
+              <div class="ml-3">
+                <a href="#" class="underline-red text-dark grey-text"
+                  >The U.S., Israel and the UAE: A Trump Doctrine Emerges</a
+                >
+                <p
+                  class="grey-text pt-1 text-muted"
+                  style="font-size: smaller;"
+                >
+                  BY NORM COLEMAN
+                </p>
+              </div>
+            </div>
+            <!-- opinion article end -->
+            <!-- opinion article -->
+            <div class="d-flex px-0 pt-2 border-bottom">
+              <img src="img/opinion/op-5.jpg" class="col3-img" />
+              <div class="ml-3">
+                <a href="#" class="underline-red text-dark grey-text">
+                  If Trump Wins, Social Security Will Have a Target on Its
+                  Back</a
+                >
+                <p
+                  class="grey-text pt-1 text-muted"
+                  style="font-size: smaller;"
+                >
+                  BY HANK GILMAN
+                </p>
+              </div>
+            </div>
+            <!-- opinion article end -->
+            <!-- opinion article -->
+            <div class="d-flex px-0 pt-2 border-bottom">
+              <img src="img/opinion/op-6.jpg" class="col3-img" />
+              <div class="ml-3">
+                <a href="#" class="underline-red text-dark grey-text"
+                  >See You in Court, Michigan. The Tampon Tax Is
+                  Discrimination</a
+                >
+                <p
+                  class="grey-text pt-1 text-muted"
+                  style="font-size: smaller;"
+                >
+                  BY JENNIFER WEISS-WOLF
+                </p>
+              </div>
+            </div>
+            <!-- opinion article end -->
+            <!-- opinion article -->
+            <div class="d-flex px-0 pt-2">
+              <img src="img/opinion/op-7.jpg" class="col3-img" />
+              <div class="ml-3">
+                <a href="#" class="underline-red text-dark grey-text"
+                  >Congress Should Stop Massive Online Piracy of Streaming
+                  Movies and Shows</a
+                >
+                <p
+                  class="grey-text pt-1 text-muted"
+                  style="font-size: smaller;"
+                >
+                  BY ADAM MOSSOFF
+                </p>
+              </div>
+            </div>
+            <!-- opinion article end -->
+          </section>
+          <!-- end of opinion -->
+          <!-- start of sign up card -->
+          <section>
+            <div class="card card-body bg-light">
+              <div
+                class="card-title d-flex align-items-center justify-content-center"
+              >
+                <span class="n-svg mr-2"></span>
+                <h5 class="text-uppercase font-important my-0">
+                  start your day with our top 5 articles
+                </h5>
+              </div>
+              <input
+                type="email"
+                placeholder="Email address"
+                class="email-border"
+              />
+              <a href="#" class>
+                <button
+                  class="button border-0 btn-block font-important text-white sign-up py-1 mt-2"
+                >
+                  FREE SIGN-UP
+                </button>
+              </a>
+            </div>
+          </section>
+          <!-- end of sign-up card -->
         </div>
       </div>
     </div>
