add breakapoints to main body

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="container main-con px-0 pt-3 bg-white">
       <div class="row justify-content-center">
         <!-- column 1 -->
-        <div class="col-3 bg-white pr-2 pl-0">
+        <div class="col-lg-3 col-md-6 col-xs bg-white pr-2 pl-0">
           <!-- featured stories -->
 
           <!-- sub-heading -->
@@ -126,7 +126,7 @@
           <!--article start -->
           <section>
             <span class="position-relative d-flex flex-column">
-              <img src="/img/featured-1.jpg" alt="#" class="img-fluid" />
+              <img src="/img/featured-1.jpg" alt="#" class="w-100 contain" />
               <span
                 class="genre position-absolute px-2 pb-1 pt-1 font-weight-bold"
                 >POLITICS</span
@@ -149,7 +149,7 @@
           <!--article start -->
           <section class="my-4">
             <span class="position-relative d-flex flex-column">
-              <img src="/img/featured-2.jpg" alt="#" class="img-fluid" />
+              <img src="/img/featured-2.jpg" alt="#" class="w-100" />
               <span
                 class="genre position-absolute px-2 pb-1 pt-1 font-weight-bold"
                 >BUSINESS</span
@@ -172,7 +172,7 @@
           <!--article start -->
           <section class="my-4">
             <span class="position-relative d-flex flex-column">
-              <img src="/img/featured-3.jpg" alt="#" class="img-fluid" />
+              <img src="/img/featured-3.jpg" alt="#" class="w-100" />
               <span
                 class="genre position-absolute px-2 pb-1 pt-1 font-weight-bold"
                 >HEALTH</span
@@ -195,7 +195,7 @@
           <!--article start -->
           <section class="my-4">
             <span class="position-relative d-flex flex-column">
-              <img src="/img/featured-4.jpg" alt="#" class="img-fluid" />
+              <img src="/img/featured-4.jpg" alt="#" class="w-100" />
               <span
                 class="genre position-absolute px-2 pb-1 pt-1 font-weight-bold"
                 >POLITICS</span
@@ -219,7 +219,7 @@
           <!--article start -->
           <section class="my-4">
             <span class="position-relative d-flex flex-column">
-              <img src="/img/featured-5.jpg" alt="#" class="img-fluid" />
+              <img src="/img/featured-5.jpg" alt="#" class="w-100" />
               <span
                 class="genre position-absolute px-2 pb-1 pt-1 font-weight-bold"
                 >HEALTH</span
@@ -242,7 +242,7 @@
           <!-- article end -->
         </div>
         <!-- column 2 -->
-        <div class="col-5 bg-white px-3">
+        <div class="col-lg-5 col-md-6 col-xs bg-white px-3">
           <!-- start of top story -->
 
           <section>
@@ -252,7 +252,7 @@
             </h6>
             <!--article start -->
             <span class="position-relative d-flex flex-column">
-              <img src="/img/top-story.jpg" alt="#" class="img-fluid" />
+              <img src="/img/top-story.jpg" alt="#" class="w-100" />
               <span
                 class="genre position-absolute px-2 pb-1 pt-1 font-weight-bold"
                 >HEALTH</span
@@ -632,7 +632,7 @@
           <!-- end of more stories -->
         </div>
         <!-- column 3 -->
-        <div class="col-3 pl-2 pr-0 sticky align-self-start">
+        <div class="col-lg-3 col-md col-xs pl-2 pr-0 sticky align-self-start">
           <!-- start of the debate -->
           <!-- title -->
           <h6 class="text-uppercase text-muted font-weight-bold">
@@ -671,7 +671,7 @@
               </div>
             </div>
             <!-- debate article -->
-            <div class="d-flex pt-2">
+            <div class="d-flex pt-2 justify-content-between">
               <div>
                 <a href="#" class="underline-red text-dark grey-text"
                   >Legalizing Pot Is a Catastrophic Mistake</a
