--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
   </head>
 
-  <body class="bg-light">
+  <body class="bg-white">
     <!-- start of navbar -->
     <div class="container main-con nav-font text-white p-0">
       <!-- start of first navbar -->
@@ -49,7 +49,7 @@
       <nav
         class="navbar d-flex p-0 border-bottom justify-content-start bg-white"
       >
-        <ul class="text d-flex p-0 m-0 align-items-center">
+        <ul class="text d-flex p-0 m-0 align-items-center flex-wrap">
           <li class="px-4 my-2 border-right">
             <a href="#">U.S.</a>
           </li>
@@ -277,9 +277,7 @@
           <!-- start of my turn -->
           <section>
             <!-- subtitle -->
-            <h6 class="text-uppercase text-muted font-weight-bold">
-              my turn
-            </h6>
+            <h6 class="text-uppercase text-muted font-weight-bold">my turn</h6>
             <!-- my-turn container -->
             <div class="container px-2">
               <div class="row">
@@ -287,7 +285,7 @@
                   <a href="#"
                     ><img src="/img/my-turn-1.jpg" class="img-fluid"
                   /></a>
-                  <p class="text-muted grey-text mt-2" style="font-size: 15px;">
+                  <p class="text-muted grey-text mt-2" style="font-size: 15px">
                     'I Work With Couples About to Divorce, Here Are Their Top 5
                     Problems'
                   </p>
@@ -296,7 +294,7 @@
                   <a href="#"
                     ><img src="/img/my-turn-2.jpg" class="img-fluid"
                   /></a>
-                  <p class="text-muted grey-text mt-2" style="font-size: 15px;">
+                  <p class="text-muted grey-text mt-2" style="font-size: 15px">
                     'I'm Bringing a Therapy Llama to the Portland Protests'
                   </p>
                 </div>
@@ -304,7 +302,7 @@
                   <a href="#"
                     ><img src="/img/my-turn-3.jpg" class="img-fluid"
                   /></a>
-                  <p class="text-muted grey-text mt-2" style="font-size: 15px;">
+                  <p class="text-muted grey-text mt-2" style="font-size: 15px">
                     'Six Years On From Mike Brown's Death, I Have Not Seen The
                     Change We Need'
                   </p>
@@ -317,9 +315,7 @@
           <!-- start of culture -->
           <section>
             <!-- subtitle -->
-            <h6 class="text-uppercase text-muted font-weight-bold">
-              my turn
-            </h6>
+            <h6 class="text-uppercase text-muted font-weight-bold">my turn</h6>
             <!-- culture container -->
             <div class="container px-2">
               <div class="row">
@@ -327,7 +323,7 @@
                   <a href="#"
                     ><img src="/img/culture-1.jpg" class="img-fluid"
                   /></a>
-                  <p class="text-muted grey-text mt-2" style="font-size: 15px;">
+                  <p class="text-muted grey-text mt-2" style="font-size: 15px">
                     Outdoor Movies Around the World with Cinematic Views
                   </p>
                 </div>
@@ -335,7 +331,7 @@
                   <a href="#"
                     ><img src="/img/culture-2.jpg" class="img-fluid"
                   /></a>
-                  <p class="text-muted grey-text mt-2" style="font-size: 15px;">
+                  <p class="text-muted grey-text mt-2" style="font-size: 15px">
                     RVs Continue to Surge in Popularity Amidst Pandemic
                   </p>
                 </div>
@@ -343,7 +339,7 @@
                   <a href="#"
                     ><img src="/img/culture-3.jpg" class="img-fluid"
                   /></a>
-                  <p class="text-muted grey-text mt-2" style="font-size: 15px;">
+                  <p class="text-muted grey-text mt-2" style="font-size: 15px">
                     Ready for Shark Week? The Most Surprising Facts About Sharks
                   </p>
                 </div>
@@ -635,9 +631,7 @@
         <div class="col-lg-3 col-md col-xs pl-2 pr-0 sticky align-self-start">
           <!-- start of the debate -->
           <!-- title -->
-          <h6 class="text-uppercase text-muted font-weight-bold">
-            the debate
-          </h6>
+          <h6 class="text-uppercase text-muted font-weight-bold">the debate</h6>
           <!-- title end -->
           <!-- debate content -->
           <section
@@ -656,8 +650,8 @@
                   >Legalization Is the Only Way to Improve the Criminal Justice
                   System</a
                 >
-                <p class="grey-text pt-1" style="font-size: smaller;">
-                  <span style="font-weight: 100;">BY</span> MAJOR NEILL FRANKLIN
+                <p class="grey-text pt-1" style="font-size: smaller">
+                  <span style="font-weight: 100">BY</span> MAJOR NEILL FRANKLIN
                   (RET.)
                 </p>
               </div>
@@ -676,8 +670,8 @@
                 <a href="#" class="underline-red text-dark grey-text"
                   >Legalizing Pot Is a Catastrophic Mistake</a
                 >
-                <p class="grey-text pt-1" style="font-size: smaller;">
-                  <span style="font-weight: 100;">BY</span> MAJOR NEILL FRANKLIN
+                <p class="grey-text pt-1" style="font-size: smaller">
+                  <span style="font-weight: 100">BY</span> MAJOR NEILL FRANKLIN
                   (RET.)
                 </p>
               </div>
@@ -699,10 +693,7 @@
                   >Unlike Republicans, Democrats Can Govern. But Can They
                   Fight?</a
                 >
-                <p
-                  class="grey-text pt-1 text-muted"
-                  style="font-size: smaller;"
-                >
+                <p class="grey-text pt-1 text-muted" style="font-size: smaller">
                   BY ROBERT REICH
                 </p>
               </div>
@@ -715,10 +706,7 @@
                 <a href="#" class="underline-red text-dark grey-text"
                   >New Mideast Peace Deal Reflects a Broader U.S. Strategy</a
                 >
-                <p
-                  class="grey-text pt-1 text-muted"
-                  style="font-size: smaller;"
-                >
+                <p class="grey-text pt-1 text-muted" style="font-size: smaller">
                   BY ILAN BERMAN
                 </p>
               </div>
@@ -732,10 +720,7 @@
                   We Need to Invoke the U.N. Snapback on Iran—Before It's Too
                   Late</a
                 >
-                <p
-                  class="grey-text pt-1 text-muted"
-                  style="font-size: smaller;"
-                >
+                <p class="grey-text pt-1 text-muted" style="font-size: smaller">
                   BY TED CRUZ
                 </p>
               </div>
@@ -748,10 +733,7 @@
                 <a href="#" class="underline-red text-dark grey-text"
                   >The U.S., Israel and the UAE: A Trump Doctrine Emerges</a
                 >
-                <p
-                  class="grey-text pt-1 text-muted"
-                  style="font-size: smaller;"
-                >
+                <p class="grey-text pt-1 text-muted" style="font-size: smaller">
                   BY NORM COLEMAN
                 </p>
               </div>
@@ -765,10 +747,7 @@
                   If Trump Wins, Social Security Will Have a Target on Its
                   Back</a
                 >
-                <p
-                  class="grey-text pt-1 text-muted"
-                  style="font-size: smaller;"
-                >
+                <p class="grey-text pt-1 text-muted" style="font-size: smaller">
                   BY HANK GILMAN
                 </p>
               </div>
@@ -782,10 +761,7 @@
                   >See You in Court, Michigan. The Tampon Tax Is
                   Discrimination</a
                 >
-                <p
-                  class="grey-text pt-1 text-muted"
-                  style="font-size: smaller;"
-                >
+                <p class="grey-text pt-1 text-muted" style="font-size: smaller">
                   BY JENNIFER WEISS-WOLF
                 </p>
               </div>
@@ -799,10 +775,7 @@
                   >Congress Should Stop Massive Online Piracy of Streaming
                   Movies and Shows</a
                 >
-                <p
-                  class="grey-text pt-1 text-muted"
-                  style="font-size: smaller;"
-                >
+                <p class="grey-text pt-1 text-muted" style="font-size: smaller">
                   BY ADAM MOSSOFF
                 </p>
               </div>
